--- a/Lab-5/Lab-5.html
+++ b/Lab-5/Lab-5.html
@@ -15,6 +15,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -90,8 +91,11 @@
                         <img src="Images/Comecs Esports.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption">
 
-                            <h5>Esports</h5>
-                            <p>Lorem Ipsum dolor sitamet consectetur adpisicing elit. Exercitationem harum, in perferendis</p>
+                            <p class="h5">Esports</p>
+                            <p>
+                                Join us for an exciting lineup of esports events, featuring popular games like PUBG Mobile, Tekken 8, and FC 24. 
+                                Compete with fellow students, showcase your skills, and experience the thrill of competitive gaming. Don't miss out on the action!
+                            </p>
                             <a href="https://linktr.ee/comecs" class="btn btn-outline-light mt-3"> Learn More</a>
 
                         </div>
@@ -102,8 +106,11 @@
                         <img src="Images/Pet Show.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption">
 
-                            <h5>Pet Show</h5>
-                            <p>Lorem Ipsum dolor sitamet consectetur adpisicing elit. Exercitationem harum, in perferendis</p>
+                            <p class="h5">Pet Show</p>
+                            <p>
+                                Showcase your adorable pets and share their unique talents. It's a perfect opportunity to celebrate our furry 
+                                (and feathered) friends, with fun prizes for the cutest, most talented, and best-dressed pets.
+                            </p>
                             <a href="https://linktr.ee/comecs" class="btn btn-warning text-white mt-3"> Learn More</a>
 
                         </div>
@@ -114,8 +121,11 @@
                         <img src="Images/Among Us.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption">
 
-                            <h5>Among Us</h5>
-                            <p>Lorem Ipsum dolor sitamet consectetur adpisicing elit. Exercitationem harum, in perferendis</p>
+                            <p class="h5">Among Us</p>
+                            <p>
+                                Experience the thrill of the hit game "Among Us" in real life! Form teams, complete tasks, and try to identify the 
+                                impostors before they sabotage the fun. It's an exciting challenge of trust, deception, and teamwork.
+                            </p>
                             <a href="https://linktr.ee/comecs" class="btn btn-warning mt-3"> Learn More</a>
 
                         </div>
@@ -126,8 +136,11 @@
                         <img src="Images/Ludo.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption">
 
-                            <h5>Board LUDO</h5>
-                            <p>Lorem Ipsum dolor sitamet consectetur adpisicing elit. Exercitationem harum, in perferendis</p>
+                            <p class="h5">Board LUDO</p>
+                            <p>
+                                Get ready for a classic game of LUDO with a competitive twist. Gather your friends, roll the dice, and race to get 
+                                your pieces home first. Fun and rivalry are guaranteed!
+                            </p>
                             <a href="https://linktr.ee/comecs" class="btn btn-outline-warning text-white mt-3"> Learn More</a>
 
                         </div>
@@ -138,8 +151,11 @@
                         <img src="Images/Minute to win it.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption">
 
-                            <h5>Minute to WIN it</h5>
-                            <p>Lorem Ipsum dolor sitamet consectetur adpisicing elit. Exercitationem harum, in perferendis</p>
+                            <p class="h5">Minute to WIN it</p>
+                            <p>
+                                Take on a series of fun, fast-paced challenges that must be completed within 60 seconds. Test your agility, coordination, 
+                                and quick thinking as you compete for the ultimate "Minute to Win It" champion title.
+                            </p>
                             <a href="https://linktr.ee/comecs" class="btn btn-outline-secondary text-white mt-3"> Learn More</a>
 
                         </div>
@@ -150,8 +166,11 @@
                         <img src="Images/Blindfold.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption">
 
-                            <h5>Blindfold Hunt</h5>
-                            <p>Lorem Ipsum dolor sitamet consectetur adpisicing elit. Exercitationem harum, in perferendis</p>
+                            <p class="h5">Blindfold Hunt</p>
+                            <p>
+                                Join the hunt for hidden treasures while blindfolded! Rely on your senses and teammates to guide you to victory in this fun and 
+                                challenging game that tests communication and trust.
+                            </p>
                             <a href="https://linktr.ee/comecs" class="btn btn-warning text-white mt-3"> Learn More</a>
 
                         </div>
@@ -162,8 +181,11 @@
                         <img src="Images/Paper Plane.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption">
 
-                            <h5>Paper Plane</h5>
-                            <p>Lorem Ipsum dolor sitamet consectetur adpisicing elit. Exercitationem harum, in perferendis</p>
+                            <p class="h5">Paper Plane</p>
+                            <p>
+                                Craft your best paper plane and compete to see whose plane flies the farthest. Channel your inner aeronautical engineer in this simple 
+                                but fun competition that requires both skill and creativity.
+                            </p>
                             <a href="https://linktr.ee/comecs" class="btn btn-info text-white mt-3"> Learn More</a>
 
                         </div>
@@ -174,8 +196,11 @@
                         <img src="Images/Musical Chair.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption">
 
-                            <h5>Musical Chair</h5>
-                            <p>Lorem Ipsum dolor sitamet consectetur adpisicing elit. Exercitationem harum, in perferendis</p>
+                            <p class="h5">Musical Chair</p>
+                            <p>
+                                Join the fun and excitement of Musical Chair! As the music plays, walk around the circle of chairs—but when the music stops, grab a seat as 
+                                fast as you can. Who will be the last one sitting?
+                            </p>
                             <a href="https://linktr.ee/comecs" class="btn btn-outline-info text-white mt-3"> Learn More</a>
 
                         </div>
@@ -219,13 +244,12 @@
                         <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
 
                             <div class="about-text">
-
-                                <p class="h2">Lorem Ipsum <br>dolor sitamet</p>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing
-                                elit. Perspiciatis reprehenderit laborum saepe architecto 
-                                aspernatur aperiam provident! Amet incidunt ea voluptatem 
-                                aliquam fuga mollitia libero dolore blanditiis non? Suscipit,odio libero!</p>
-                                
+                                <p class="h2">COMSATS Islamabad <br>Wah Campus</p>
+                                <p>
+                                    COMSATS University Islamabad, Wah Campus is a vibrant center of higher learning, committed to providing quality education in a
+                                    diverse range of disciplines. Our campus fosters an environment that encourages innovation, research, and personal growth, helping 
+                                    students prepare for a successful future. Join us to experience the unique blend of academic excellence and a supportive community.
+                                </p>
                                 <a href="#" class="btn btn-warning">Learn More</a>
                             </div>
 
@@ -237,24 +261,23 @@
 
             </section>
 
-             <section id="about" class="about section-padding">
+            <section id="events" class="events section-padding">
 
                 <div class="container">
-                    
+
                     <div class="row">
 
                         <div class="col-md-12">
 
                             <div class="section-header text-center pb-5">
-
-                                <p class="h2">Lorem Ipsum</p>
-                                <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Dolorum, temporibus!</p>
-
+                                <p class="h2">Upcoming Events</p>
+                                <p>Explore the exciting events happening at COMSATS Islamabad Wah Campus!<br> Get involved, have fun, and make unforgettable memories.</p>
                             </div>
 
                         </div>
 
                     </div>
+
                     <div class="row">
 
                         <div class="col-12 col-md-12 col-lg-4">
@@ -263,35 +286,13 @@
 
                                 <div class="card-body">
 
-                                    <i class="bi bi-subtract"></i>
-                                    <p class="h3">Lorem Ipsum</p>
+                                    <i class="bi bi-controller"></i>
+                                    <p class="h3">Esports</p>
                                     <p class="lead">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem 
-                                        neque voluptate, officiis possimus doloribus consequatur iusto dolore ducimus 
-                                        recusandae incidunt necessitatibus dicta quae corrupti repudiandae!
+                                        Compete in our Esports Tournament featuring games like PUBG Mobile, FC 24, TEKKEN 8, and more. Test your gaming skills against 
+                                        other players and claim the title of champion!
                                     </p>
-                                    <button class="btn btn-warning text dark">Read More</button>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                         <div class="col-12 col-md-12 col-lg-4">
-
-                            <div class="card text-white text-center bg-dark pb-2">
-
-                                <div class="card-body">
-
-                                    <i class="bi bi-slack"></i>
-                                    <p class="h3">Lorem Ipsum</p>
-                                    <p class="lead">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem 
-                                        neque voluptate, officiis possimus doloribus consequatur iusto dolore ducimus 
-                                        recusandae incidunt necessitatibus dicta quae corrupti repudiandae!
-                                    </p>
-                                    <button class="btn btn-warning text dark">Read More</button>
+                                    <button class="btn btn-warning text-dark">Read More</button>
 
                                 </div>
 
@@ -305,15 +306,121 @@
 
                                 <div class="card-body">
 
-                                    <i class="bi bi-playstation"></i>
-                                    <p class="h3">Lorem Ipsum</p>
+                                    <i class="fa-solid fa-paw"></i>
+                                    <p class="h3">Pet Show</p>
                                     <p class="lead">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem 
-                                        neque voluptate, officiis possimus doloribus consequatur iusto dolore ducimus 
-                                        recusandae incidunt necessitatibus dicta quae corrupti repudiandae!
+                                        Bring your furry friends and showcase their unique talents at the Pet Show. Compete for fun prizes in categories like cutest pet
+                                        and best-dressed!
                                     </p>
-                                    <button class="btn btn-warning text dark">Read More</button>
+                                    <button class="btn btn-warning text-dark">Read More</button>
 
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-12 col-md-12 col-lg-4">
+
+                            <div class="card text-white text-center bg-dark pb-2">
+
+                                <div class="card-body">
+
+                                    <i class="bi bi-people-fill"></i>
+                                    <p class="h3">Among Us</p>
+                                    <p class="lead">
+                                        Experience the excitement of the popular game "Among Us" in real life. Complete tasks, spot impostors, and see if you can outsmart your friends!
+                                    </p>
+                                    <button class="btn btn-warning text-dark">Read More</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-12 col-md-12 col-lg-4">
+
+                            <div class="card text-white text-center bg-dark pb-2">
+
+                                <div class="card-body">
+
+                                    <i class="bi bi-border-all"></i>
+                                    <p class="h3">Board LUDO</p>
+                                    <p class="lead">
+                                        Roll the dice and test your luck in a friendly game of LUDO! Gather your friends and enjoy the competition in this classic board game.
+                                    </p>
+                                    <button class="btn btn-warning text-dark">Read More</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-12 col-md-12 col-lg-4">
+
+                            <div class="card text-white text-center bg-dark pb-2 mt-4">
+
+                                <div class="card-body">
+
+                                    <i class="bi bi-clock"></i>
+                                    <p class="h3">Minute to Win It</p>
+                                    <p class="lead">
+                                        Compete in a series of quick, exciting challenges that must be completed within 60 seconds. Test your speed, skill, and agility to win!
+                                    </p>
+                                    <button class="btn btn-warning text-dark">Read More</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-12 col-md-12 col-lg-4">
+
+                            <div class="card text-white text-center bg-dark pb-2 mt-4">
+
+                                <div class="card-body">
+
+                                    <i class="bi bi-eye-slash-fill"></i>
+                                    <p class="h3">Blindfold Hunt</p>
+                                    <p class="lead">
+                                        Embark on a thrilling Blindfold Hunt! Work with your team to find hidden treasures while relying solely on communication and trust.
+                                    </p>
+                                    <button class="btn btn-warning text-dark">Read More</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-12 col-md-12 col-lg-4">
+
+                            <div class="card text-white text-center bg-dark pb-2 mt-4">
+
+                                <div class="card-body">
+
+                                    <i class="bi bi-airplane"></i>
+                                    <p class="h3">Paper Plane Contest</p>
+                                    <p class="lead">
+                                        Craft the best paper plane and compete to see whose plane flies the farthest. It’s time to show your creativity and aeronautical skills!
+                                    </p>
+                                    <button class="btn btn-warning text-dark">Read More</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-12 col-md-12 col-lg-4">
+
+                            <div class="card text-white text-center bg-dark pb-2 mt-4">
+                                <div class="card-body">
+
+                                    <i class="bi bi-music-note-list"></i>
+                                    <p class="h3">Musical Chair</p>
+                                    <p class="lead">
+                                        Join in the classic game of Musical Chair! Move with the music, but when it stops, grab a seat as fast as you can. Last one sitting wins!
+                                    </p>
+                                    <button class="btn btn-warning text-dark">Read More</button>
                                 </div>
 
                             </div>
